[gd_scene load_steps=11 format=4 uid="uid://d370fajn62la7"]

[ext_resource type="Script" path="res://managers/GameManager.gd" id="2_3k0w7"]
[ext_resource type="Texture2D" uid="uid://cvtl1f5y538uy" path="res://Sprite/environment/wall64.png" id="2_278gd"]
[ext_resource type="Script" path="res://managers/spawner/PlayerSpawner.gd" id="3_4a00c"]
[ext_resource type="PackedScene" uid="uid://cio4svb8b44cm" path="res://managers/spawner/spawner.tscn" id="4_gl8g4"]
[ext_resource type="PackedScene" uid="uid://bjkqe7gy0n4gr" path="res://UI/ui.tscn" id="5_m2sr4"]
[ext_resource type="Script" path="res://managers/EventManagers.gd" id="6_irc80"]
[ext_resource type="PackedScene" uid="uid://dr2pu7glrsgda" path="res://Weapon/HandGun.tscn" id="7_ku020"]
[ext_resource type="Script" path="res://managers/spawner/EnvironmentSpawner.gd" id="7_lagx3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mfeuo"]
texture = ExtResource("2_278gd")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(11.75, 12, 16, 12.25, 16, 16, 12.75, 18.5)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 12.25, 16, 12, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 11, -12.5, 12.5, -12.25, 16, -16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(11.5, -16, 16, -16, 16, 16, 12, 16)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -12.5, -16, -12, 16, -16, 16)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(12, -16, 16, -16, 16, -11.5, 13, -11)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, -12.5, -16, -12.25)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -11.25, -16, -11.5, -11.25, -14, -11.5, -16, -11.25)

[sub_resource type="TileSet" id="TileSet_mavp6"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
sources/0 = SubResource("TileSetAtlasSource_mfeuo")

[node name="Level" type="Node2D"]

[node name="LayerHolder" type="Node2D" parent="."]
position = Vector2(597, 310)

[node name="TileMapLayer" type="TileMapLayer" parent="LayerHolder"]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAAAAADt//b/AAABAAAAAAAQAPb/AAABAAAAAADu//b/AAABAAAAAAAPAPb/AAABAAAAAAAOAPb/AAABAAAAAAANAPb/AAABAAAAAAAMAPb/AAABAAAAAAALAPb/AAABAAAAAAAKAPb/AAABAAAAAAAJAPb/AAABAAAAAAAIAPb/AAABAAAAAAAHAPb/AAABAAAAAAAGAPb/AAABAAAAAAAFAPb/AAABAAAAAAAEAPb/AAABAAAAAAADAPb/AAABAAAAAAACAPb/AAABAAAAAAABAPb/AAABAAAAAAAAAPb/AAABAAAAAAD///b/AAABAAAAAAD+//b/AAABAAAAAAD9//b/AAABAAAAAAD8//b/AAABAAAAAAD7//b/AAABAAAAAAD6//b/AAABAAAAAAD5//b/AAABAAAAAAD4//b/AAABAAAAAAD3//b/AAABAAAAAAD2//b/AAABAAAAAAD1//b/AAABAAAAAAD0//b/AAABAAAAAADz//b/AAABAAAAAADy//b/AAABAAAAAADx//b/AAABAAAAAADw//b/AAABAAAAAADv//b/AAABAAAAAADt//f/AAABAAAAAADt//j/AAABAAAAAADt//n/AAABAAAAAADt//r/AAABAAAAAADt//v/AAABAAAAAADt//z/AAABAAAAAADt//3/AAABAAAAAADt//7/AAABAAAAAADt////AAABAAAAAADu/wAAAAABAAAAAADu/wEAAAABAAAAAADu/wIAAAABAAAAAADu/wMAAAABAAAAAADu/wQAAAABAAAAAADu/wUAAAABAAAAAADu/wYAAAABAAAAAADu/wcAAAABAAAAAADu/wgAAAABAAAAAADt/wkAAAABAAAAAADt/woAAAABAAAAAADu/woAAAABAAAAAADv/woAAAABAAAAAADw/woAAAABAAAAAADx/woAAAABAAAAAADy/woAAAABAAAAAADz/woAAAABAAAAAAD0/woAAAABAAAAAAD1/woAAAABAAAAAAD2/woAAAABAAAAAAD3/woAAAABAAAAAAD4/woAAAABAAAAAAD5/woAAAABAAAAAAD6/woAAAABAAAAAAD7/woAAAABAAAAAAD8/woAAAABAAAAAAD9/woAAAABAAAAAAD+/woAAAABAAAAAAD//woAAAABAAAAAAAAAAoAAAABAAAAAAABAAoAAAABAAAAAAACAAoAAAABAAAAAAADAAoAAAABAAAAAAAEAAoAAAABAAAAAAAFAAoAAAABAAAAAAAGAAoAAAABAAAAAAAHAAoAAAABAAAAAAAIAAoAAAABAAAAAAAJAAoAAAABAAAAAAAKAAoAAAABAAAAAAALAAoAAAABAAAAAAAMAAoAAAABAAAAAAANAAoAAAABAAAAAAAOAAoAAAABAAAAAAAPAAoAAAABAAAAAAAQAAoAAAABAAAAAAARAAoAAAABAAAAAAARAAkAAAABAAAAAAARAAgAAAABAAAAAAARAAcAAAABAAAAAAARAAYAAAABAAAAAAARAAUAAAABAAAAAAARAAQAAAABAAAAAAARAAMAAAABAAAAAAARAAIAAAABAAAAAAARAAEAAAABAAAAAAARAAAAAAABAAAAAAARAP//AAABAAAAAAARAP7/AAABAAAAAAARAP3/AAABAAAAAAARAPz/AAABAAAAAAARAPv/AAABAAAAAAARAPr/AAABAAAAAAARAPn/AAABAAAAAAARAPj/AAABAAAAAAARAPf/AAABAAAAAAARAPb/AAABAAAAAADt/wAAAAABAAAAAADt/wEAAAABAAAAAADt/wIAAAABAAAAAADt/wMAAAABAAAAAADt/wQAAAABAAAAAADt/wUAAAABAAAAAADt/wYAAAABAAAAAADt/wcAAAABAAAAAADt/wgAAAABAAAAAAAKAAIAAAABAAAAAAAKAAEAAAABAAAAAAAKAAAAAAABAAAAAAAKAP//AAABAAAAAAAKAP7/AAABAAAAAAAKAP3/AAABAAAAAAAKAPz/AAABAAAAAAAKAPv/AAABAAAAAAAKAPr/AAABAAAAAAAKAPn/AAABAAAAAAAKAPj/AAABAAAAAAAKAPf/AAABAAAAAAAJAPf/AAABAAAAAAAIAPf/AAABAAAAAAAHAPf/AAABAAAAAAAGAPf/AAABAAAAAAAFAPf/AAABAAAAAAAEAPf/AAABAAAAAAADAPf/AAABAAAAAAACAPf/AAABAAAAAAABAPf/AAABAAAAAAAAAPf/AAABAAAAAAD///f/AAABAAAAAAD+//f/AAABAAAAAAD9//f/AAABAAAAAAD8//f/AAABAAAAAAD7//f/AAABAAAAAAD6//f/AAABAAAAAAD5//f/AAABAAAAAAD4//f/AAABAAAAAAD3//f/AAABAAAAAAD2//f/AAABAAAAAAD1//f/AAABAAAAAAD0//f/AAABAAAAAADz//f/AAABAAAAAADy//f/AAABAAAAAADx//f/AAABAAAAAADw//f/AAABAAAAAADv//f/AAABAAAAAADu//f/AAABAAAAAADu//j/AAABAAAAAADu//n/AAABAAAAAADu//r/AAABAAAAAADu//v/AAABAAAAAADu//z/AAABAAAAAADu//3/AAABAAAAAADu//7/AAABAAAAAADu////AAABAAAAAADv////AAABAAAAAADv//7/AAABAAAAAADv//3/AAABAAAAAADv//z/AAABAAAAAADv//v/AAABAAAAAADv//r/AAABAAAAAADv//n/AAABAAAAAADv//j/AAABAAAAAADw//j/AAABAAAAAADw//n/AAABAAAAAADw//r/AAABAAAAAADw//v/AAABAAAAAADw//z/AAABAAAAAADw//3/AAABAAAAAADw//7/AAABAAAAAADw////AAABAAAAAADw/wAAAAABAAAAAADv/wAAAAABAAAAAADv/wEAAAABAAAAAADv/wIAAAABAAAAAADv/wMAAAABAAAAAADv/wQAAAABAAAAAADv/wUAAAABAAAAAADv/wYAAAABAAAAAADv/wcAAAABAAAAAADv/wgAAAABAAAAAADv/wkAAAABAAAAAADu/wkAAAABAAAAAADw/wkAAAABAAAAAADw/wgAAAABAAAAAADw/wcAAAABAAAAAADw/wYAAAABAAAAAADw/wUAAAABAAAAAADw/wQAAAABAAAAAADw/wMAAAABAAAAAADw/wIAAAABAAAAAADw/wEAAAABAAAAAADx/wEAAAABAAAAAADx/wAAAAABAAAAAADx////AAABAAAAAADx//7/AAABAAAAAADx//3/AAABAAAAAADx//z/AAABAAAAAADx//v/AAABAAAAAADx//r/AAABAAAAAADx//n/AAABAAAAAADx//j/AAABAAAAAADy//j/AAABAAAAAADy//n/AAABAAAAAADy//r/AAABAAAAAADy//v/AAABAAAAAADy//z/AAABAAAAAADy//3/AAABAAAAAADy//7/AAABAAAAAADy////AAABAAAAAADy/wAAAAABAAAAAADy/wEAAAABAAAAAADy/wIAAAABAAAAAADx/wIAAAABAAAAAADx/wMAAAABAAAAAADx/wQAAAABAAAAAADx/wUAAAABAAAAAADx/wYAAAABAAAAAADx/wcAAAABAAAAAADx/wgAAAABAAAAAADx/wkAAAABAAAAAADy/wkAAAABAAAAAADy/wgAAAABAAAAAADy/wcAAAABAAAAAADy/wYAAAABAAAAAADy/wUAAAABAAAAAADy/wQAAAABAAAAAADy/wMAAAABAAAAAADz/wMAAAABAAAAAADz/wIAAAABAAAAAADz/wEAAAABAAAAAADz/wAAAAABAAAAAADz////AAABAAAAAADz//7/AAABAAAAAADz//3/AAABAAAAAADz//z/AAABAAAAAADz//v/AAABAAAAAADz//r/AAABAAAAAADz//n/AAABAAAAAADz//j/AAABAAAAAAD0//j/AAABAAAAAAD0//n/AAABAAAAAAD0//r/AAABAAAAAAD0//v/AAABAAAAAAD0//z/AAABAAAAAAD0//3/AAABAAAAAAD0//7/AAABAAAAAAD0////AAABAAAAAAD0/wAAAAABAAAAAAD0/wEAAAABAAAAAAD0/wIAAAABAAAAAAD0/wMAAAABAAAAAAD0/wQAAAABAAAAAADz/wQAAAABAAAAAADz/wUAAAABAAAAAADz/wYAAAABAAAAAADz/wcAAAABAAAAAADz/wgAAAABAAAAAADz/wkAAAABAAAAAAD0/wkAAAABAAAAAAD0/wgAAAABAAAAAAD0/wcAAAABAAAAAAD0/wYAAAABAAAAAAD0/wUAAAABAAAAAAD1/wUAAAABAAAAAAD1/wQAAAABAAAAAAD1/wMAAAABAAAAAAD1/wIAAAABAAAAAAD1/wEAAAABAAAAAAD1/wAAAAABAAAAAAD1////AAABAAAAAAD1//7/AAABAAAAAAD1//3/AAABAAAAAAD1//z/AAABAAAAAAD1//v/AAABAAAAAAD1//r/AAABAAAAAAD1//n/AAABAAAAAAD1//j/AAABAAAAAAD2//j/AAABAAAAAAD2//n/AAABAAAAAAD2//r/AAABAAAAAAD2//v/AAABAAAAAAD2//z/AAABAAAAAAD2//3/AAABAAAAAAD2//7/AAABAAAAAAD2////AAABAAAAAAD2/wAAAAABAAAAAAD2/wEAAAABAAAAAAD2/wIAAAABAAAAAAD2/wMAAAABAAAAAAD2/wQAAAABAAAAAAD2/wUAAAABAAAAAAD2/wYAAAABAAAAAAD1/wYAAAABAAAAAAD1/wcAAAABAAAAAAD1/wgAAAABAAAAAAD1/wkAAAABAAAAAAD2/wkAAAABAAAAAAD2/wgAAAABAAAAAAD2/wcAAAABAAAAAAD3/wcAAAABAAAAAAD3/wYAAAABAAAAAAD3/wUAAAABAAAAAAD3/wQAAAABAAAAAAD3/wMAAAABAAAAAAD3/wIAAAABAAAAAAD3/wEAAAABAAAAAAD3/wAAAAABAAAAAAD3////AAABAAAAAAD3//7/AAABAAAAAAD3//3/AAABAAAAAAD3//z/AAABAAAAAAD3//v/AAABAAAAAAD3//r/AAABAAAAAAD3//n/AAABAAAAAAD3//j/AAABAAAAAAD4//j/AAABAAAAAAD4//n/AAABAAAAAAD4//r/AAABAAAAAAD4//v/AAABAAAAAAD4//z/AAABAAAAAAD4//3/AAABAAAAAAD4//7/AAABAAAAAAD4////AAABAAAAAAD4/wAAAAABAAAAAAD4/wEAAAABAAAAAAD4/wIAAAABAAAAAAD4/wMAAAABAAAAAAD4/wQAAAABAAAAAAD4/wUAAAABAAAAAAD4/wYAAAABAAAAAAD4/wcAAAABAAAAAAD4/wgAAAABAAAAAAD3/wgAAAABAAAAAAD3/wkAAAABAAAAAAD4/wkAAAABAAAAAAD5/wkAAAABAAAAAAD5/wgAAAABAAAAAAD5/wcAAAABAAAAAAD5/wYAAAABAAAAAAD5/wUAAAABAAAAAAD5/wQAAAABAAAAAAD5/wMAAAABAAAAAAD5/wIAAAABAAAAAAD5/wEAAAABAAAAAAD5/wAAAAABAAAAAAD5////AAABAAAAAAD5//7/AAABAAAAAAD5//3/AAABAAAAAAD5//z/AAABAAAAAAD5//v/AAABAAAAAAD5//r/AAABAAAAAAD5//n/AAABAAAAAAD5//j/AAABAAAAAAD6//j/AAABAAAAAAD6//n/AAABAAAAAAD6//r/AAABAAAAAAD6//v/AAABAAAAAAD6//z/AAABAAAAAAD6//3/AAABAAAAAAD6//7/AAABAAAAAAD6////AAABAAAAAAD6/wAAAAABAAAAAAD6/wEAAAABAAAAAAD6/wIAAAABAAAAAAD6/wMAAAABAAAAAAD6/wQAAAABAAAAAAD6/wUAAAABAAAAAAD6/wYAAAABAAAAAAD6/wcAAAABAAAAAAD6/wgAAAABAAAAAAD6/wkAAAABAAAAAAD7/wkAAAABAAAAAAD7/wgAAAABAAAAAAD7/wcAAAABAAAAAAD7/wYAAAABAAAAAAD7/wUAAAABAAAAAAD7/wQAAAABAAAAAAD7/wMAAAABAAAAAAD7/wIAAAABAAAAAAD7/wEAAAABAAAAAAD7/wAAAAABAAAAAAD7////AAABAAAAAAD7//7/AAABAAAAAAD7//3/AAABAAAAAAD7//z/AAABAAAAAAD7//v/AAABAAAAAAD7//r/AAABAAAAAAD7//n/AAABAAAAAAD7//j/AAABAAAAAAD8//j/AAABAAAAAAD8//n/AAABAAAAAAD8//r/AAABAAAAAAD8//v/AAABAAAAAAD8//z/AAABAAAAAAD8//3/AAABAAAAAAD8//7/AAABAAAAAAD8////AAABAAAAAAD8/wAAAAABAAAAAAD8/wEAAAABAAAAAAD8/wIAAAABAAAAAAD8/wMAAAABAAAAAAD8/wQAAAABAAAAAAD8/wUAAAABAAAAAAD8/wYAAAABAAAAAAD8/wcAAAABAAAAAAD8/wgAAAABAAAAAAD8/wkAAAABAAAAAAD9/wkAAAABAAAAAAD9/wgAAAABAAAAAAD9/wcAAAABAAAAAAD9/wYAAAABAAAAAAD9/wUAAAABAAAAAAD9/wQAAAABAAAAAAD9/wMAAAABAAAAAAD9/wIAAAABAAAAAAD9/wEAAAABAAAAAAD9/wAAAAABAAAAAAD9////AAABAAAAAAD9//7/AAABAAAAAAD9//3/AAABAAAAAAD9//z/AAABAAAAAAD9//v/AAABAAAAAAD9//r/AAABAAAAAAD9//n/AAABAAAAAAD9//j/AAABAAAAAAD+//j/AAABAAAAAAD+//n/AAABAAAAAAD+//r/AAABAAAAAAD+//v/AAABAAAAAAD+//z/AAABAAAAAAD+//3/AAABAAAAAAD+//7/AAABAAAAAAD+////AAABAAAAAAD+/wAAAAABAAAAAAD+/wEAAAABAAAAAAD+/wIAAAABAAAAAAD+/wMAAAABAAAAAAD+/wQAAAABAAAAAAD+/wUAAAABAAAAAAD+/wYAAAABAAAAAAD+/wcAAAABAAAAAAD+/wgAAAABAAAAAAD+/wkAAAABAAAAAAD//wkAAAABAAAAAAD//wgAAAABAAAAAAD//wcAAAABAAAAAAD//wYAAAABAAAAAAD//wUAAAABAAAAAAD//wQAAAABAAAAAAD//wMAAAABAAAAAAD//wIAAAABAAAAAAD//wEAAAABAAAAAAD//wAAAAABAAAAAAD/////AAABAAAAAAD///7/AAABAAAAAAD///3/AAABAAAAAAD///z/AAABAAAAAAD///v/AAABAAAAAAD///r/AAABAAAAAAD///n/AAABAAAAAAD///j/AAABAAAAAAAAAPj/AAABAAAAAAAAAPn/AAABAAAAAAAAAPr/AAABAAAAAAAAAPv/AAABAAAAAAAAAPz/AAABAAAAAAAAAP3/AAABAAAAAAAAAP7/AAABAAAAAAAAAP//AAABAAAAAAABAP//AAABAAAAAAABAP7/AAABAAAAAAABAP3/AAABAAAAAAABAPz/AAABAAAAAAABAPv/AAABAAAAAAABAPr/AAABAAAAAAABAPn/AAABAAAAAAABAPj/AAABAAAAAAACAPj/AAABAAAAAAACAPn/AAABAAAAAAACAPr/AAABAAAAAAACAPv/AAABAAAAAAACAPz/AAABAAAAAAACAP3/AAABAAAAAAACAP7/AAABAAAAAAACAP//AAABAAAAAAACAAAAAAABAAAAAAABAAAAAAABAAAAAAABAAEAAAABAAAAAAAAAAEAAAABAAAAAAAAAAIAAAABAAAAAAAAAAMAAAABAAAAAAAAAAQAAAABAAAAAAAAAAUAAAABAAAAAAAAAAYAAAABAAAAAAAAAAcAAAABAAAAAAAAAAgAAAABAAAAAAAAAAkAAAABAAAAAAABAAkAAAABAAAAAAABAAgAAAABAAAAAAABAAcAAAABAAAAAAABAAYAAAABAAAAAAABAAUAAAABAAAAAAABAAQAAAABAAAAAAABAAMAAAABAAAAAAABAAIAAAABAAAAAAACAAIAAAABAAAAAAACAAEAAAABAAAAAAADAAEAAAABAAAAAAADAAAAAAABAAAAAAADAP//AAABAAAAAAADAP7/AAABAAAAAAADAP3/AAABAAAAAAADAPz/AAABAAAAAAADAPv/AAABAAAAAAADAPr/AAABAAAAAAADAPn/AAABAAAAAAADAPj/AAABAAAAAAAEAPj/AAABAAAAAAAEAPn/AAABAAAAAAAEAPr/AAABAAAAAAAEAPv/AAABAAAAAAAEAPz/AAABAAAAAAAEAP3/AAABAAAAAAAEAP7/AAABAAAAAAAEAP//AAABAAAAAAAEAAAAAAABAAAAAAAEAAEAAAABAAAAAAAEAAIAAAABAAAAAAADAAIAAAABAAAAAAADAAMAAAABAAAAAAACAAMAAAABAAAAAAACAAQAAAABAAAAAAACAAUAAAABAAAAAAACAAYAAAABAAAAAAACAAcAAAABAAAAAAACAAgAAAABAAAAAAACAAkAAAABAAAAAAADAAkAAAABAAAAAAADAAgAAAABAAAAAAADAAcAAAABAAAAAAADAAYAAAABAAAAAAADAAUAAAABAAAAAAADAAQAAAABAAAAAAAEAAQAAAABAAAAAAAEAAMAAAABAAAAAAAFAAMAAAABAAAAAAAFAAIAAAABAAAAAAAFAAEAAAABAAAAAAAFAAAAAAABAAAAAAAFAP//AAABAAAAAAAFAP7/AAABAAAAAAAFAP3/AAABAAAAAAAFAPz/AAABAAAAAAAFAPv/AAABAAAAAAAFAPr/AAABAAAAAAAFAPn/AAABAAAAAAAFAPj/AAABAAAAAAAGAPj/AAABAAAAAAAGAPn/AAABAAAAAAAGAPr/AAABAAAAAAAGAPv/AAABAAAAAAAGAPz/AAABAAAAAAAGAP3/AAABAAAAAAAGAP7/AAABAAAAAAAGAP//AAABAAAAAAAGAAAAAAABAAAAAAAGAAEAAAABAAAAAAAGAAIAAAABAAAAAAAGAAMAAAABAAAAAAAGAAQAAAABAAAAAAAFAAQAAAABAAAAAAAFAAUAAAABAAAAAAAEAAUAAAABAAAAAAAEAAYAAAABAAAAAAAEAAcAAAABAAAAAAAEAAgAAAABAAAAAAAEAAkAAAABAAAAAAAFAAkAAAABAAAAAAAFAAgAAAABAAAAAAAFAAcAAAABAAAAAAAFAAYAAAABAAAAAAAGAAYAAAABAAAAAAAGAAUAAAABAAAAAAAHAAUAAAABAAAAAAAHAAQAAAABAAAAAAAHAAMAAAABAAAAAAAHAAIAAAABAAAAAAAHAAEAAAABAAAAAAAHAAAAAAABAAAAAAAHAP//AAABAAAAAAAHAP7/AAABAAAAAAAHAP3/AAABAAAAAAAHAPz/AAABAAAAAAAHAPv/AAABAAAAAAAHAPr/AAABAAAAAAAHAPn/AAABAAAAAAAHAPj/AAABAAAAAAAIAPj/AAABAAAAAAAIAPn/AAABAAAAAAAIAPr/AAABAAAAAAAIAPv/AAABAAAAAAAIAPz/AAABAAAAAAAIAP3/AAABAAAAAAAIAP7/AAABAAAAAAAIAP//AAABAAAAAAAIAAAAAAABAAAAAAAIAAEAAAABAAAAAAAIAAIAAAABAAAAAAAIAAMAAAABAAAAAAAIAAQAAAABAAAAAAAIAAUAAAABAAAAAAAIAAYAAAABAAAAAAAHAAYAAAABAAAAAAAHAAcAAAABAAAAAAAGAAcAAAABAAAAAAAGAAgAAAABAAAAAAAGAAkAAAABAAAAAAAHAAkAAAABAAAAAAAHAAgAAAABAAAAAAAIAAgAAAABAAAAAAAIAAcAAAABAAAAAAAJAAcAAAABAAAAAAAJAAYAAAABAAAAAAAJAAUAAAABAAAAAAAJAAQAAAABAAAAAAAJAAMAAAABAAAAAAAJAAIAAAABAAAAAAAJAAEAAAABAAAAAAAJAAAAAAABAAAAAAAJAP//AAABAAAAAAAJAP7/AAABAAAAAAAJAP3/AAABAAAAAAAJAPz/AAABAAAAAAAJAPv/AAABAAAAAAAJAPr/AAABAAAAAAAJAPn/AAABAAAAAAAJAPj/AAABAAAAAAAKAAMAAAABAAAAAAAKAAQAAAABAAAAAAAKAAUAAAABAAAAAAAKAAYAAAABAAAAAAAKAAcAAAABAAAAAAAKAAgAAAABAAAAAAAJAAgAAAABAAAAAAAJAAkAAAABAAAAAAAIAAkAAAABAAAAAAAKAAkAAAABAAAAAAALAAkAAAABAAAAAAALAAgAAAABAAAAAAALAAcAAAABAAAAAAALAAYAAAABAAAAAAALAAUAAAABAAAAAAALAAQAAAABAAAAAAALAAMAAAABAAAAAAALAAIAAAABAAAAAAALAAEAAAABAAAAAAALAAAAAAABAAAAAAALAP//AAABAAAAAAALAP7/AAABAAAAAAALAP3/AAABAAAAAAALAPz/AAABAAAAAAALAPv/AAABAAAAAAALAPr/AAABAAAAAAALAPn/AAABAAAAAAALAPj/AAABAAAAAAALAPf/AAABAAAAAAAMAPf/AAABAAAAAAAMAPj/AAABAAAAAAAMAPn/AAABAAAAAAAMAPr/AAABAAAAAAAMAPv/AAABAAAAAAAMAPz/AAABAAAAAAAMAP3/AAABAAAAAAAMAP7/AAABAAAAAAAMAP//AAABAAAAAAAMAAAAAAABAAAAAAAMAAEAAAABAAAAAAAMAAIAAAABAAAAAAAMAAMAAAABAAAAAAAMAAQAAAABAAAAAAAMAAUAAAABAAAAAAAMAAYAAAABAAAAAAAMAAcAAAABAAAAAAAMAAgAAAABAAAAAAAMAAkAAAABAAAAAAANAAkAAAABAAAAAAANAAgAAAABAAAAAAANAAcAAAABAAAAAAANAAYAAAABAAAAAAANAAUAAAABAAAAAAANAAQAAAABAAAAAAANAAMAAAABAAAAAAANAAIAAAABAAAAAAANAAEAAAABAAAAAAANAAAAAAABAAAAAAANAP//AAABAAAAAAANAP7/AAABAAAAAAANAP3/AAABAAAAAAANAPz/AAABAAAAAAANAPv/AAABAAAAAAANAPr/AAABAAAAAAANAPn/AAABAAAAAAANAPj/AAABAAAAAAANAPf/AAABAAAAAAAOAPf/AAABAAAAAAAOAPj/AAABAAAAAAAOAPn/AAABAAAAAAAOAPr/AAABAAAAAAAOAPv/AAABAAAAAAAOAPz/AAABAAAAAAAOAP3/AAABAAAAAAAOAP7/AAABAAAAAAAOAP//AAABAAAAAAAOAAAAAAABAAAAAAAOAAEAAAABAAAAAAAOAAIAAAABAAAAAAAOAAMAAAABAAAAAAAOAAQAAAABAAAAAAAOAAUAAAABAAAAAAAOAAYAAAABAAAAAAAOAAcAAAABAAAAAAAOAAgAAAABAAAAAAAOAAkAAAABAAAAAAAPAAkAAAABAAAAAAAPAAgAAAABAAAAAAAPAAcAAAABAAAAAAAPAAYAAAABAAAAAAAPAAUAAAABAAAAAAAPAAQAAAABAAAAAAAPAAMAAAABAAAAAAAPAAIAAAABAAAAAAAPAAEAAAABAAAAAAAPAAAAAAABAAAAAAAPAP//AAABAAAAAAAPAP7/AAABAAAAAAAPAP3/AAABAAAAAAAPAPz/AAABAAAAAAAPAPv/AAABAAAAAAAPAPr/AAABAAAAAAAPAPn/AAABAAAAAAAPAPj/AAABAAAAAAAPAPf/AAABAAAAAAAQAPf/AAABAAAAAAAQAPj/AAABAAAAAAAQAPn/AAABAAAAAAAQAPr/AAABAAAAAAAQAPv/AAABAAAAAAAQAPz/AAABAAAAAAAQAP3/AAABAAAAAAAQAP7/AAABAAAAAAAQAP//AAABAAAAAAAQAAAAAAABAAAAAAAQAAEAAAABAAAAAAAQAAIAAAABAAAAAAAQAAMAAAABAAAAAAAQAAQAAAABAAAAAAAQAAUAAAABAAAAAAAQAAYAAAABAAAAAAAQAAcAAAABAAAAAAAQAAgAAAABAAAAAAAQAAkAAAABAAAAAAASAAoAAAABAAAAAAASAAkAAAABAAAAAAATAAoAAAABAAAAAAATAAkAAAABAAAAAAATAAgAAAABAAAAAAATAAcAAAABAAAAAAATAAYAAAABAAAAAAASAAYAAAABAAAAAAASAAUAAAABAAAAAAATAAUAAAABAAAAAAATAAQAAAABAAAAAAATAAMAAAABAAAAAAASAAMAAAABAAAAAAAUAAoAAAABAAAAAAAVAAoAAAABAAAAAAASAPb/AAABAAAAAAATAPb/AAABAAAAAAAUAPb/AAABAAAAAAAVAPb/AAABAAAAAAAWAPb/AAABAAAAAAAWAPf/AAABAAAAAAAWAPj/AAABAAAAAAAWAPn/AAABAAAAAAAWAPr/AAABAAAAAAAWAPv/AAABAAAAAAAWAPz/AAABAAAAAAAWAP3/AAABAAAAAAAWAP7/AAABAAAAAAAWAP//AAABAAAAAAAWAAAAAAABAAAAAAAWAAEAAAABAAAAAAAWAAIAAAABAAAAAAAVAAIAAAABAAAAAAAVAAMAAAABAAAAAAAVAAQAAAABAAAAAAAVAAUAAAABAAAAAAAVAAYAAAABAAAAAAAVAAcAAAABAAAAAAAVAAgAAAABAAAAAAAWAAgAAAABAAAAAAAWAAkAAAABAAAAAAAWAAoAAAABAAAAAAAUAAIAAAABAAAAAADt//X/AAABAAAAAADu//X/AAABAAAAAADv//X/AAABAAAAAADw//X/AAABAAAAAADx//X/AAABAAAAAADy//X/AAABAAAAAADz//X/AAABAAAAAAD0//X/AAABAAAAAAD1//X/AAABAAAAAAD2//X/AAABAAAAAAD3//X/AAABAAAAAAD4//X/AAABAAAAAAD5//X/AAABAAAAAAD6//X/AAABAAAAAAD7//X/AAABAAAAAAD8//X/AAABAAAAAAD9//X/AAABAAAAAAD+//X/AAABAAAAAAD///X/AAABAAAAAAAAAPX/AAABAAAAAAABAPX/AAABAAAAAAACAPX/AAABAAAAAAADAPX/AAABAAAAAAAEAPX/AAABAAAAAAAFAPX/AAABAAAAAADt//T/AAABAAAAAADu//T/AAABAAAAAADv//T/AAABAAAAAADw//T/AAABAAAAAADx//T/AAABAAAAAADy//T/AAABAAAAAADz//T/AAABAAAAAAD0//T/AAABAAAAAAD1//T/AAABAAAAAAD2//T/AAABAAAAAAD3//T/AAABAAAAAAD4//T/AAABAAAAAAD5//T/AAABAAAAAAD6//T/AAABAAAAAAD7//T/AAABAAAAAAD8//T/AAABAAAAAAD9//T/AAABAAAAAAD+//T/AAABAAAAAAD///T/AAABAAAAAAAAAPT/AAABAAAAAAABAPT/AAABAAAAAAACAPT/AAABAAAAAAADAPT/AAABAAAAAAAEAPT/AAABAAAAAAAFAPT/AAABAAAAAAAGAPT/AAABAAAAAAAHAPT/AAABAAAAAAAIAPT/AAABAAAAAAAJAPT/AAABAAAAAAAKAPT/AAABAAAAAAALAPT/AAABAAAAAAAMAPT/AAABAAAAAAANAPT/AAABAAAAAAAOAPT/AAABAAAAAAAPAPT/AAABAAAAAAAQAPT/AAABAAAAAAAQAPX/AAABAAAAAAARAPX/AAABAAAAAAASAPX/AAABAAAAAAATAPX/AAABAAAAAAAUAPX/AAABAAAAAAAVAPX/AAABAAAAAAAWAPX/AAABAAAAAAAXAPX/AAABAAAAAAAXAPT/AAABAAAAAAAWAPT/AAABAAAAAAAVAPT/AAABAAAAAAAUAPT/AAABAAAAAAATAPT/AAABAAAAAAASAPT/AAABAAAAAAARAPT/AAABAAAAAAAGAPX/AAABAAAAAAAHAPX/AAABAAAAAAAIAPX/AAABAAAAAAAJAPX/AAABAAAAAAAKAPX/AAABAAAAAAALAPX/AAABAAAAAAAMAPX/AAABAAAAAAANAPX/AAABAAAAAAAOAPX/AAABAAAAAAAPAPX/AAABAAAAAAAXAPb/AAABAAAAAAAXAPf/AAABAAAAAAAXAPj/AAABAAAAAAAXAPn/AAABAAAAAAAXAPr/AAABAAAAAAAXAPv/AAABAAAAAAAXAPz/AAABAAAAAAAXAP3/AAABAAAAAAAXAP7/AAABAAAAAAAXAP//AAABAAAAAAAXAAAAAAABAAAAAAAXAAEAAAABAAAAAAAXAAIAAAABAAAAAAAXAAMAAAABAAAAAAAXAAQAAAABAAAAAAAXAAUAAAABAAAAAAAXAAYAAAABAAAAAAAXAAcAAAABAAAAAAAXAAgAAAABAAAAAAAXAAkAAAABAAAAAAAXAAoAAAABAAAAAAASAP7/AAABAAAAAAASAP3/AAABAAAAAAASAPz/AAABAAAAAAASAPv/AAABAAAAAAASAPr/AAABAAAAAAASAPn/AAABAAAAAAASAPj/AAABAAAAAAASAPf/AAABAAAAAAATAPf/AAABAAAAAAATAPj/AAABAAAAAAATAPn/AAABAAAAAAATAPr/AAABAAAAAAATAPv/AAABAAAAAAATAPz/AAABAAAAAAATAP3/AAABAAAAAAATAP7/AAABAAAAAAATAP//AAABAAAAAAASAP//AAABAAAAAAASAAAAAAABAAAAAAASAAEAAAABAAAAAAASAAIAAAABAAAAAAATAAIAAAABAAAAAAATAAEAAAABAAAAAAATAAAAAAABAAAAAAAUAAAAAAABAAAAAAAUAP//AAABAAAAAAAUAP7/AAABAAAAAAAUAP3/AAABAAAAAAAUAPz/AAABAAAAAAAUAPv/AAABAAAAAAAUAPr/AAABAAAAAAAUAPn/AAABAAAAAAAUAPj/AAABAAAAAAAUAPf/AAABAAAAAAAVAPf/AAABAAAAAAAVAPj/AAABAAAAAAAVAPn/AAABAAAAAAAVAPr/AAABAAAAAAAVAPv/AAABAAAAAAAVAPz/AAABAAAAAAAVAP3/AAABAAAAAAAVAP7/AAABAAAAAAAVAP//AAABAAAAAAAVAAAAAAABAAAAAAAVAAEAAAABAAAAAAAUAAEAAAABAAAAAAAUAAQAAAABAAAAAAAUAAMAAAABAAAAAAAUAAUAAAABAAAAAAAUAAYAAAABAAAAAAAUAAcAAAABAAAAAAAUAAgAAAABAAAAAAAUAAkAAAABAAAAAAAVAAkAAAABAAAAAAASAAgAAAABAAAAAAASAAcAAAABAAAAAAASAAQAAAABAAAAAAAWAAQAAAABAAAAAAAWAAMAAAABAAAAAAAWAAUAAAABAAAAAAAWAAYAAAABAAAAAAAWAAcAAAABAAAAAADs/wMAAAAFAAAAAADs//T/AAAFAAAAAADs//X/AAAFAAAAAADs//b/AAAFAAAAAADs//f/AAAFAAAAAADs//j/AAAFAAAAAADs//n/AAAFAAAAAADs//r/AAAFAAAAAADs//v/AAAFAAAAAADs//z/AAAFAAAAAADs//3/AAAFAAAAAADs//7/AAAFAAAAAADs////AAAFAAAAAADs/wAAAAAFAAAAAADs/wEAAAAFAAAAAADs/wIAAAAFAAAAAADs/wQAAAAFAAAAAADs/wUAAAAFAAAAAADs/wYAAAAFAAAAAADs/wcAAAAFAAAAAADs/wgAAAAFAAAAAADs/wkAAAAFAAAAAADs/woAAAAFAAAAAADs/wsAAAAHAAAAAADt/wsAAAAIAAAAAADu/wsAAAAIAAAAAADv/wsAAAAIAAAAAADw/wsAAAAIAAAAAADx/wsAAAAIAAAAAADy/wsAAAAIAAAAAADz/wsAAAAIAAAAAAD0/wsAAAAIAAAAAAD1/wsAAAAIAAAAAAD2/wsAAAAIAAAAAAD3/wsAAAAIAAAAAAD4/wsAAAAIAAAAAAD5/wsAAAAIAAAAAAD6/wsAAAAIAAAAAAD7/wsAAAAIAAAAAAD8/wsAAAAIAAAAAAD9/wsAAAAIAAAAAAD+/wsAAAAIAAAAAAD//wsAAAAIAAAAAAAAAAsAAAAIAAAAAAABAAsAAAAIAAAAAAACAAsAAAAIAAAAAAADAAsAAAAIAAAAAAAEAAsAAAAIAAAAAAAFAAsAAAAIAAAAAAAGAAsAAAAIAAAAAAAHAAsAAAAIAAAAAAAIAAsAAAAIAAAAAAAJAAsAAAAIAAAAAAAKAAsAAAAIAAAAAAALAAsAAAAIAAAAAAAMAAsAAAAIAAAAAAANAAsAAAAIAAAAAAAOAAsAAAAIAAAAAAAPAAsAAAAIAAAAAAAQAAsAAAAIAAAAAAARAAsAAAAIAAAAAAASAAsAAAAIAAAAAAATAAsAAAAIAAAAAAAUAAsAAAAIAAAAAAAVAAsAAAAIAAAAAAAWAAsAAAAIAAAAAAAXAAsAAAAIAAAAAAAYAAsAAAAJAAAAAAAYAAoAAAAGAAAAAAAYAAkAAAAGAAAAAAAYAAgAAAAGAAAAAAAYAAcAAAAGAAAAAAAYAAYAAAAGAAAAAAAYAAUAAAAGAAAAAAAYAAQAAAAGAAAAAAAYAAMAAAAGAAAAAAAYAAIAAAAGAAAAAAAYAAEAAAAGAAAAAAAYAAAAAAAGAAAAAAAYAP//AAAGAAAAAAAYAP7/AAAGAAAAAAAYAP3/AAAGAAAAAAAYAPz/AAAGAAAAAAAYAPv/AAAGAAAAAAAYAPr/AAAGAAAAAAAYAPn/AAAGAAAAAAAYAPj/AAAGAAAAAAAYAPf/AAAGAAAAAAAYAPb/AAAGAAAAAAAYAPX/AAAGAAAAAAAYAPT/AAAGAAAAAAAYAPP/AAAEAAAAAAAXAPP/AAADAAAAAAAWAPP/AAADAAAAAAAVAPP/AAADAAAAAAAUAPP/AAADAAAAAAATAPP/AAADAAAAAAASAPP/AAADAAAAAAARAPP/AAADAAAAAAAQAPP/AAADAAAAAAAPAPP/AAADAAAAAAAOAPP/AAADAAAAAAANAPP/AAADAAAAAAAMAPP/AAADAAAAAAALAPP/AAADAAAAAAAKAPP/AAADAAAAAAAJAPP/AAADAAAAAAAIAPP/AAADAAAAAAAHAPP/AAADAAAAAAAGAPP/AAADAAAAAAAFAPP/AAADAAAAAAAEAPP/AAADAAAAAAADAPP/AAADAAAAAAACAPP/AAADAAAAAAABAPP/AAADAAAAAAAAAPP/AAADAAAAAAD///P/AAADAAAAAAD+//P/AAADAAAAAAD9//P/AAADAAAAAAD8//P/AAADAAAAAAD7//P/AAADAAAAAAD6//P/AAADAAAAAAD5//P/AAADAAAAAAD4//P/AAADAAAAAAD3//P/AAADAAAAAAD2//P/AAADAAAAAAD1//P/AAADAAAAAAD0//P/AAADAAAAAADz//P/AAADAAAAAADy//P/AAADAAAAAADx//P/AAADAAAAAADw//P/AAADAAAAAADv//P/AAADAAAAAADu//P/AAADAAAAAADt//P/AAADAAAAAADs//P/AAACAAAAAAA=")
tile_set = SubResource("TileSet_mavp6")

[node name="GameManager" type="Node2D" parent="." groups=["GameManager"]]
unique_name_in_owner = true
process_mode = 3
position = Vector2(1, 0)
script = ExtResource("2_3k0w7")
weapons = ["res://Weapon/Glave.tscn", "res://Weapon/MachineGun.tscn", "res://Weapon/Shotgun.tscn", "res://Weapon/Sniper.tscn", "res://Weapon/HandGun.tscn", "res://Weapon/HCRevolver.tscn", "res://Weapon/ScatterGun.tscn", "res://Weapon/SpeedGun.tscn", "res://Weapon/Executioner.tscn", "res://Weapon/RussianRoulette.tscn"]
maxKillCount = 15
fameMultiTimeFrame = 5.0

[node name="WeaponTimer" type="Timer" parent="GameManager"]
unique_name_in_owner = true
process_mode = 1
wait_time = 10.0
one_shot = true

[node name="FameMultiplierTimer" type="Timer" parent="GameManager"]
unique_name_in_owner = true
process_mode = 1
one_shot = true

[node name="WeaponSpawnPoints" type="Node" parent="GameManager"]
unique_name_in_owner = true

[node name="p1" type="Node2D" parent="GameManager/WeaponSpawnPoints"]
position = Vector2(53, -36)

[node name="p2" type="Node2D" parent="GameManager/WeaponSpawnPoints"]
position = Vector2(1251, -26)

[node name="p3" type="Node2D" parent="GameManager/WeaponSpawnPoints"]
position = Vector2(2, 607)

[node name="p4" type="Node2D" parent="GameManager/WeaponSpawnPoints"]
position = Vector2(1231, 595)

[node name="RoundTimer" type="Timer" parent="GameManager"]
unique_name_in_owner = true
process_mode = 1
wait_time = 999.0
autostart = true

[node name="Spawner" parent="GameManager" instance=ExtResource("4_gl8g4")]
unique_name_in_owner = true
position = Vector2(576, 267)
enemies = ["res://Enemy/Slime.tscn", "res://Enemy/Shooter.tscn", "res://Enemy/Charger.tscn", "res://Enemy/Disabler.tscn", "res://Enemy/Summoner.tscn"]
maxAllow = 0

[node name="s1" parent="GameManager/Spawner" index="1"]
position = Vector2(-456, -160)

[node name="s2" parent="GameManager/Spawner" index="2"]
position = Vector2(449, -187)

[node name="s3" parent="GameManager/Spawner" index="3"]
position = Vector2(-465, 289)

[node name="s4" parent="GameManager/Spawner" index="4"]
position = Vector2(375, 245)

[node name="EnvironmentSpawner" type="Node2D" parent="GameManager"]
unique_name_in_owner = true
position = Vector2(-1, 0)
script = ExtResource("7_lagx3")
environment_props = ["res://environment/barrel.tscn", "res://environment/ShootingBotActual.tscn"]
mega_struct_props = ["res://environment/MaterialCollectionTower.tscn", "res://environment/DataCollectionTower.tscn"]

[node name="EnvironmentSpawnPoints" type="Node" parent="GameManager/EnvironmentSpawner"]

[node name="e1" type="Node2D" parent="GameManager/EnvironmentSpawner/EnvironmentSpawnPoints"]
position = Vector2(186, 207)

[node name="e2" type="Node2D" parent="GameManager/EnvironmentSpawner/EnvironmentSpawnPoints"]
position = Vector2(1196, 98)

[node name="e3" type="Node2D" parent="GameManager/EnvironmentSpawner/EnvironmentSpawnPoints"]
position = Vector2(100, 481)

[node name="e4" type="Node2D" parent="GameManager/EnvironmentSpawner/EnvironmentSpawnPoints"]
position = Vector2(1227, 561)

[node name="MegaStruct" type="Node2D" parent="GameManager/EnvironmentSpawner"]
position = Vector2(582, 290)

[node name="EventManager" type="Node2D" parent="GameManager"]
script = ExtResource("6_irc80")
no_round_to_activate = 1
orbital_strike_wait_time = 1.5

[node name="EventTimer" type="Timer" parent="GameManager/EventManager"]
wait_time = 1.75
autostart = true

[node name="UI" parent="." instance=ExtResource("5_m2sr4")]
unique_name_in_owner = true

[node name="HandGun" parent="." instance=ExtResource("7_ku020")]
position = Vector2(614, 280)

[node name="PlayerSpawner" type="Node2D" parent="."]
position = Vector2(584, 223)
script = ExtResource("3_4a00c")

[connection signal="timeout" from="GameManager/WeaponTimer" to="GameManager" method="_on_weapon_timer_timeout"]
[connection signal="timeout" from="GameManager/FameMultiplierTimer" to="." method="_on_fame_multiplier_timer_timeout"]
[connection signal="timeout" from="GameManager/RoundTimer" to="GameManager" method="_on_round_timer_timeout"]
[connection signal="timeout" from="GameManager/EventManager/EventTimer" to="GameManager/EventManager" method="_on_event_timer_timeout"]

[editable path="GameManager/Spawner"]
